--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Niha's project</title>
   </head>
   <body>
+    <h1>Header</h1>
     <p>Niha's change #1</p>
     <p>Niha's change #2</p>
   </body>
