--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Header</h1>
     <h2>Niha's header</h2>
+    <h3>Hana's second header</h3>
     <p>Niha's change #1</p>
     <p>Niha's change #2</p>
     <p>Hana change #2</p>
